re-fix Colpitts params.

--- a/tasks.tex
+++ b/tasks.tex
@@ -675,12 +675,14 @@ $ \rho = \sqrt{L/C} $ имеет размерность сопротивлени
   z = \frac{V_{2}}{V_{je}}, \quad
   i_{ce} = \frac{\rho I_{ce}}{V_{je}}, \quad
   c = \frac{V_{CC}}{V_{je}}, \quad
-  e =  \frac{V_{b}}{V_{je}}.
+  e = \frac{V_{b}}{V_{je}}.
 \]
 \[
-  b = \frac{R_E}{\rho}; \quad
-  d = \frac{R_C}{\rho}.
+  b = \frac{R_c}{\rho}; \quad
+  d = \frac{\rho}{R_C}. % sic!
 \]
+
+Система уравнений принимает вид:
 
 
 \begin{equation}
@@ -710,10 +712,40 @@ $ T_s = \sqrt{L C} $.
   \frac{dx}{dt_s} \equiv \dot{x} = T_s \frac{dx}{dt} .
 \]
 
+Поведение величины $I_{ce}$ достаточно хорошо описывает модель
+Эберса-Молла~[Хоровиц]:
 
-Используем простейшую модель транзистора, считаем, что переход
-база-эмиттер открывается при $V_{BE} = V_{je}$,
-а ток коллектора $I_c = \alpha I_b$ и $ I_c \gg I_b$.
+\begin{equation}
+  I_c = I_s \left( \exp\frac{V_{be}}U_t{} - 1 \right),
+  \label{atu:eq:ebers-moll}
+\end{equation}
+
+\noindent
+где
+$I_s$ -- ток насыщения (паспортная или определяемая экспериментально величина),
+$U_t=kT/q$,
+$q = \SI{1.6e-19}{\coulomb}$ -- заряд электрона,
+$k = \SI{1.38e-24}{\joule/\kelvin}$ -- постоянная Больцмана.
+Необходимо учесть, что в режиме отсечки ($V_b < V_e$) ток коллектора пренебрежимо мал,
+а в режиме насыщения определяется другими элементами схемы.
+Существуют и более сложные модели, например,
+программы для моделирования электронных схем часто используют так называемую SPICE модель.
+
+К сожалению, при моделировании генератора Колпитца в литературе,
+посвящённой хаотической динамике, используют
+простейшую модель транзистора, считая, что переход
+база-эмиттер открывается при $V_{BE} = V_{je}$, $ I_c \gg I_b$,
+а ток коллектора
+
+\begin{equation}
+I_c =
+  \begin{cases}
+    \alpha ( V_b - V_e - V_{je} ), & V_b - V_e > V_{je} \\
+    0                              & \text{otherwise}.
+  \end{cases}
+  \label{atu:eq:bjt_libear_model}
+\end{equation}
+
 
 
 С учётом всего вышеизложенного получаем следующую систему уравнений:
@@ -727,19 +759,6 @@ $ T_s = \sqrt{L C} $.
 \end{cases}
 \end{equation}
 
-\noindent
-где, для выбранных номиналов и модели транзистора:
-$ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$,
-и
-
-\[
-F(z) =
-\begin{cases}{l}
-  e-z-1, & z \le e-1  \\
-  0,     & z  >  e-1
-\end{cases}.
-\]
-
 При этом параметр $b$ характеризует соотношение
 активного и реактивного сопротивления,
 и, следовательно, режима работы генератора.
@@ -748,9 +767,46 @@ F(z) =
 Поставленной задачей будем считать идентификацию
 данного параметра.
 
+При физическом моделировании в рамках данной работы использовались следующие
+элементы с соответствующими параметрами:
 
-% Идентифицируемый параметр:
-% $b \in [ 0.5; 1.1 ]$
+\[
+  V_{cc} = \SI{12.06}{\volt},          \;
+  R_1 = R_2 = \SI{2.2}{\kilo\ohm},     \;
+  R_e = \SI{430}{\ohm},                \;
+  C_1 = C_2 = \SI{1.03}{\micro\farad}, \;
+  L = \SI{6.22}{\milli\henry},         \;
+  T = \SI{305}{\kelvin},
+\]
+
+\[
+  \text{Q: 2N2222A}, \quad
+  h_{fe}=285, \quad
+  V_f = \SI{0.677}{\volt}, \quad
+  I_s = \SI{9.61e-14}{\ampere}, \quad
+  \alpha \approx 1.
+\]
+
+Тогда безразмерные коэффициенты:
+\[
+ a = 77,     \quad
+ c = 18.08,  \quad
+ d = 0.19,   \quad
+ e = 9.07.
+\]
+
+\[
+F(z) =
+\begin{cases}{l}
+  e-1-z, & z \le e-1  \\
+  0,     & z  >  e-1
+\end{cases}.
+\]
+
+
+Идентифицируемый параметр
+$b \in [ 0.02; 4.2 ]$
+
 %
 % Остальные параметры:
 % $ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$.
