Colpitts part is near to complete.

--- a/tasks.tex
+++ b/tasks.tex
@@ -811,16 +811,6 @@ $b \in [ 0.02; 4.2 ]$
 с другой -- срывом генерации.
 
 
-%
-% Остальные параметры:
-% $ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$.
-
-% \begin{figure}[htb!]
-% \centerline{\includegraphics[width=0.5\textwidth]{p/cha/colp/colp_phase.pdf} }
-% \caption{Аттрактор системы Колпитца (\ref{atu:eq:colp})}
-% \label{atu:f:colp_phase}
-% \end{figure}
-
 На рис.~\ref{atu:f:colp_real_xzz}--\ref{atu:f:colp_model_f} предствлены как результаты реального эксперимента,
 так и данные, полученные в результате численного моделирования динамики системы (\ref{atu:eq:colp}).
 Представлены проекции аттракторов но плоскость $(x+z,z)$ (естественный вид для оциллографа),
@@ -881,7 +871,7 @@ $b \in [ 0.02; 4.2 ]$
   \label{atu:f:colp_model_f}
 \end{figure}
 
-Сравнение результатов физического и численного моделирования позволяют сделать вывод
+Сравнение результатов физического и численного моделирования позволяет сделать вывод
 о качественном подобии поведения реальной системы и модели.
 Тем не менее, величины параметра $b$, при которых получены
 рассматриваемые режимы, совпадают недостаточно точно.
@@ -892,9 +882,91 @@ $b \in [ 0.02; 4.2 ]$
 К сожалению, ограниченный набор данных, получаемых с осциллографа (8192 отсчёта) не позволяют
 получить достаточно подробный спектр реальной системы.
 
-% Критерий
-% $\overline{y^2}(t)$
+Для определения критерия рассмотрим зависимости
+$q_{*}(\mu) $, полученные путём моделирования
+для системы Колпитца (рис.~\ref{atu:f:colp_q}).
+При этом следует учесть, что наиболее просто измерямыми величинами являются $x$ и $z$,
+Соответствующие напряжениям $V_1$ и $V_2$.
+Первый набор зависимостей даёт два основных кандидата -- $q_{x^2}$ и $q_{z^2}$.
+При этом первый из них показывает более равномерную зависимость.
+С другой стороны, при большинство из рассморенных зависимостей имею явно
+выраженный гиперболический характер, особенно при малых значениях $b$.
+Следовательно, в сприсок кандидатов следует добавить $q_{x^{-2}} $ и $q_{z^{-2}}$.
 
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_p-p_b_e.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_p-p_b_1ex2.png}
+}
+  \caption{Зависимости $q_{*}(b) $ для системы Колпитца (\ref{atu:eq:colp})}
+\label{atu:f:colp_q}
+\end{figure}
+
+Из графиков очевидно, что
+обратные зависимости не дают заметного выигрыша, поэтому выберем
+величину $ q_{x^2}(b) $ в качестве критерия.
+
+В качестве системы идентификации использовалась система с 5 поисковыми агентами и
+двумя неподвижными моделями. Аналогично предыдущим системам,
+для исследования динамических свойств системы идентификации
+параметр $b_o$ так:
+
+\begin{equation}
+ b_o(t) = p_0 + U_p \sign \sin( \omega_p t ),
+  \label{atu:eq:colp_b_sign}
+\end{equation}
+
+\begin{equation}
+ b_o(t) = p_0 + U_p \sin( \omega_p t ).
+  \label{atu:eq:colp_b_sin}
+\end{equation}
+
+Динамика процессов идентификации для системы Колпитца представлена на рис.~\ref{atu:f:colp_id}.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-pl_n_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-pl_n_sin.png}
+}
+\caption{Процесс идентификации параметра $b$ системы (\ref{atu:eq:colp})
+  при условиях (\ref{atu:eq:colp_b_sign}) и (\ref{atu:eq:colp_b_sin})
+}
+\label{atu:f:colp_id}
+\end{figure}
+
+Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:colp_e_qgamma})
+даёт информацию о привильной настройке этого параметра системы идентификации.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_qg_e_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_qg_e_sin.png}
+}
+  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:colp})
+  при условиях (\ref{atu:eq:colp_b_sign}) и (\ref{atu:eq:colp_b_sin})
+}
+\label{atu:f:colp_e_qgamma}
+\end{figure}
+
+
+
+Аналогично, зависимости $\bar{e_*}(q_\gamma)$ (рис.~\ref{atu:f:colp_e_a_q})
+позволяют корректно определить время усреденения.
+Полученные результаты хорошо согласуются со сектрами системы.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_a_q_e_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/colp/colp_m5p-p_a_q_e_sin.png}
+}
+  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:colp})
+  при условиях (\ref{atu:eq:colp_b_sign}) и (\ref{atu:eq:colp_b_sin})
+}
+\label{atu:f:colp_e_a_q}
+\end{figure}
+
+В целом синтез критерия идентификации, и построение работоспособной системы идентификации для
+системы Колпитца не потребовало никаких специальных подходов.
 
 
 \FloatBarrier
