Dry friction system added.

--- a/tasks.tex
+++ b/tasks.tex
@@ -72,7 +72,8 @@
 % \onehalfspacing
 \setstretch{1.2}
 
-\newcommand{\LinkRef}[1]{ \textit{#1} }
+\newcommand{\LinkRef}[1]{ \textit{\color{red}#1} }
+\newcommand{\Cmt}[1]{ {\small\color{red}#1} }
 
 
 \begin{document}
@@ -88,7 +89,7 @@
 
 \subsection{История}
 
-Предельные случаи: Заде, Райбман.
+\Cmt{Предельные случаи: Заде, Райбман.}
 
 L.A.~Zadeh (1956), ``On the Identification Problem,''
 IRE Transactions on Circuit Theory, 3, pp.  277--281.
@@ -97,9 +98,9 @@ More: Eykhoff, Rastrigin.
 
 \subsection{Новые определения}
 
-Привязка к текущей задаче, физика.
+\Cmt{Привязка к текущей задаче, физика.}
 
-Разные определения для разных задач или свести к одному определению?
+\Cmt{Разные определения для разных задач или свести к одному определению?}
 
 \subsection{Критерии идентификации}
 
@@ -163,7 +164,7 @@ More: Eykhoff, Rastrigin.
 
 \LinkRef{
   lor: ASAU-22, 23, 24, 25, 26. APIR-2012. CSIT-2015. ISDMCI-2014, ISDMCI-2015.
-  ITMM-2012, ITMM-2014, ITMM-2015
+  ITMM-2012, ITMM-2014, ITMM-2015, DSMP-2016
 }
 
 В качестве первой идентифицируемой хаотической системы рассмотрим
@@ -206,7 +207,7 @@ $\overline{x^2}$
 \subsubsection{Система Дуффинга} % _DUFF_
 
 \LinkRef{
- duff: ASAU-12, 15. APIR-2009. \ldots
+ duff: ASAU-12, 15. APIR-2009. DSMP-2016
 }
 
 \begin{equation}
@@ -1123,8 +1124,8 @@ $\overline{x^2(t)}$
 \end{figure}
 
 
-Зависимости $\bar{e_*}(q_\gamma)$ (рис.~\ref{atu:f:spr_a_e_a_q})
-с ожной стороны, позволяют корректно определить время усреденения,
+Зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:spr_a_e_a_q})
+с одной стороны, позволяют корректно определить время усреденения,
 с другой -- подтверждают тезис о том, что более ярко выраженной изменение
 параметра требует большего времени наблюдения за системой
 для проведения идентификации.
@@ -1146,22 +1147,184 @@ $\overline{x^2(t)}$
 
 
 \FloatBarrier
-\subsubsection{Система с сухим трением}
+\subsubsection{Система с сухим трением} % __FRIC__
 
 \LinkRef{
-  fric: ASAU-11, \ldots
+  fric: ASAU-11, DSMP-2016
 }
+
+Существуют динамические системы, не обладающие хаотическим поведением,
+которые, тем не менее, проявляют сходные свойства с точки зрения идентификации.
+А именно, непосредственное сравнение выходов системы и модели не позволяет
+сделать никаких выводов о соотношениях между параметрами модели о объекта.
+Одним из примеров является динамическая система, моделирующая поведение
+тела заданной массы по действием внешней вынуждающей силы и силы сухого трения (\ref{atu:eq:dryfric_sys}):
 
 \begin{equation}
  m \ddot{x} + f( x, \dot{x}, \ldots)  = u(t).
-\label{atu:eq:dryfric_example}
+\label{atu:eq:dryfric_sys}
 \end{equation}
 
-Критерий
-$\overline{e^2(t)}$
+\noindent
+где
+$m$ -- масса тела,
+$u(t)$ -- вынуждающая сила,
+$ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
-Перед этим -- гистерезисная фильтрация.
-Или много проще.
+Важной особенностью при моделировании силы сухого трения является тот факт,
+это это силу невозможно корректно выразить аналитически. Более того,
+её алгоритмическое представления неизбежно потребует учёта всех других сил,
+действующих на тело, то крайней мере, для корректного представления
+силы трения покоя. Эта особенность не даёт возможности
+аналитического анализа таких систем, за исключением ограниченного набора
+вырожденных случаев. При этом, такое поведение существенно затрудняет идентификацию,
+и в определённых случаях делает её принципиально невозможной.
+
+Основным параметром, в простейшем случае определяющим силу сухого
+трения, является $f_{dm}$ -- максимальная значение её модуля.
+Определение этой величины и будем считать целью задачи идентификации.
+
+Существенным свойством данной системы является то, что в каждой точке \(x\)
+система может находится в покое, даже если на неё действует
+внешняя сила (по модулю не превышающая $f_{dm}$).
+Если же рассмотреть пару или более подобных систем,
+то получившаяся система имеет общие свойства с системами
+хаотической динамики, а именно: малые возмущения входного сигнала
+или коэффициентов модели приводят к значительным изменениям
+выходного, причем реакция на возмущения может быть
+не ограничена во времени.
+Более того, если после какого-то момента времени
+параметры объекта и коэффициенты модели полностью совпадут,
+величина ошибки выходных не устремится к нулю, а останется на прежнем уровне.
+
+На рис.~\ref{atu:f:fric_outs} представлен сравнительный пример динамики трёх
+моделей, при одинаковом входном сигнале
+и различных значениях $f_{dm}$.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.5\textwidth]{p/cha/fric/fric_outs.png}
+  }
+  \caption{Динамика трёх моделей вида (\ref{atu:eq:dryfric_sys})}
+  \label{atu:f:fric_outs}
+\end{figure}
+
+При дальнейшем моделировании, в качестве сигнала $u(t)$ использовался кусочно-линейный периодический сигнал,
+в котором чередуются ``плато'' и резкие изменения. Выбор такая форма обусловлен
+характерными режимами работы систем позиционирования электромеханических
+устройств, для которых и характерно влияние сухого трения.
+
+Для обеспечения возможности применения методов идентификации,
+необходимо существование критерия идентификации
+\( q(x(t)) \),
+удовлетворяющего следующим требованиям:
+
+\begin{itemize}
+
+\item
+чувствительность к \textit{динамике} модели и объекта;
+
+\item
+свойство астатизма, то есть
+независимость
+от смещения выхода объекта или модели:
+\( q(x(t)+a ) \approx q( x(t) ) \);
+
+\item
+достаточная устойчивостью к шумам измерения;
+
+\item
+физическая реализуемость.
+
+\end{itemize}
+
+Первые два требования
+могут быть достигнуты путём вычисления производной --
+скорости изменения выходных сигналов
+\(v = dx(t)/dt \),
+и формирования критерия идентификации на её основе.
+
+Однако, при этом система становится исключительно чувствительной
+к шумам измерения. Даже в том случае, когда
+оценка производной производится физически реализуемыми методами,
+создать работоспособную систему идентификации на основе критериев
+подобного вида практически невозможно.
+
+В работе [asau11??] был предложен метод синтеза критерия идентификации
+на основе гистерезисной фильтрации выходных сигналов, с последующим
+вычислением производной. Метод показал свою работоспособность, однако,
+он требует достаточно точных сведений об уровне и шумов шумов -- для
+настройки гистерезисного фильтра. В данной работе сделаем предположение,
+что уровень шумов позволяет создать фильтр, позволяющий отсеивать шумы
+за (как максимум) характерное время реакции системы.
+После фильтра действует реальное дифференцирующее звено.
+Соответствующий вид критерия обозначим как $ q_{dx} $ (рис.~\ref{atu:f:fric_q}).
+
+
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.50\textwidth]{p/cha/fric/fric_p-p_f_dm_q.png}
+}
+  \caption{Зависимость $q_{dx}(f_{dm})$ для системы (\ref{atu:eq:dryfric_sys}) }
+\label{atu:f:fric_q}
+\end{figure}
+
+
+Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys}) представлена на рис.~\ref{atu:f:spr_a_id}.
+Следует отметить сильное влияние входного сигнала, так как когда системы неподвижны
+на одном из ``плато'', то нет возможности различить из параметры,
+какой бы критерий не использовался.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-pl_n_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-pl_n_sin.png}
+}
+\caption{Процесс идентификации параметра $c_{x_y} $ системы (\ref{atu:eq:dryfric_sys})
+  при различных видах нестационарности этого параметра
+}
+\label{atu:f:fric_id}
+\end{figure}
+
+Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
+достаточно сильно отличатся от аналогичной, например, для системы ``Sprott A''. На ней явно выражены
+экстремумы, дающие возможность тонкой настройки системы идентификации. Следовательно,
+для данной динамической системы робастные свойства системы идентификации проявляются слабо,
+и может потребовался дополнительная адаптация.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_qg_e_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_qg_e_sin.png}
+}
+  \caption{Зависимости  $\bar{e}(q_\gamma)$ для системы (\ref{atu:eq:dryfric_sys})
+  при различных видах нестационарности этого параметра
+}
+\label{atu:f:fric_e_qgamma}
+\end{figure}
+
+
+Зависимости $\bar{e_*}(a_q)$ (рис.~\ref{atu:f:fric_e_a_q})
+ позволяют корректно определить время усреденения.
+
+\begin{figure}[htb!]
+\centerline{
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_a_q_e_sign.png}
+  \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-p_a_q_e_sin.png}
+}
+  \caption{Зависимости  $\bar{e}(a_q)$ для системы (\ref{atu:eq:dryfric_sys})
+  при различных видах нестационарности этого параметра
+}
+\label{atu:f:fric_e_a_q}
+\end{figure}
+
+Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
+оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
+оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
+физические принципы, которые для данной системы вполне очевидны.
+
+
 
 
 
@@ -1268,7 +1431,7 @@ $\overline{e^2(t)}$
 Обычно -- три составляющие поведения
 (движение о оцениваемому локальному экстремуму, -- к глобальному, случайная составляющая).
 
-\textit{Для сравнения требуется и это промоделировать.
+\Cmt{Для сравнения требуется и это промоделировать.
 Достаточно накладно -- надо много агентов.}
 
 Достоинства -- простота алгоритмов.
@@ -1285,7 +1448,7 @@ $\overline{e^2(t)}$
 на другие области при изменении параметров за счёт недопущения
 неоправданной скученности агентов.
 
-\textit{ Заметная часть новизны планируется здесь}
+\Cmt{ Заметная часть новизны планируется здесь}
 
 \subsubsection{Один агент}
 
@@ -1323,12 +1486,14 @@ $\overline{e^2(t)}$
 
 \subsection{Адаптация}
 
+\Cmt{
 Какие параметры системы идентификации можно адаптировать
 и на каком уровне.
 
 Когда имеет смысл играть с чувствительностью.
 
 Как близко имеет смысл подводить модели к экстремуму?
+}
 
 
 Стабильные/мобильные модели.
@@ -1337,7 +1502,7 @@ $\overline{e^2(t)}$
 
 \subsection{Качество идентификации}
 
-Расширить из кандидатской с учётом времени и множества моделей.
+\Cmt{Расширить из кандидатской с учётом времени и множества моделей.}
 
 
 
@@ -1345,7 +1510,7 @@ $\overline{e^2(t)}$
 
 \subsection{Постановка задачи}
 
-Из того, что получится ;-)
+\Cmt{Из того, что получится \ldots}
 
 \subsection{Структура программного комплекса}
 
@@ -1355,27 +1520,31 @@ $\overline{e^2(t)}$
 
 \subsection{Взаимодействие с реальным миром}
 
+\Cmt{
 Просто прочитать данные - уже работает.
 Надо: realtime.
 Протокол(ы) взаимодействия (+ существующие).
+}
 
 
 \section{Реальные задачи}
 
+\Cmt{
 Ага....
+}
 
 
-\section{Всякое и старое}
+%\section{Всякое и старое}
 
 
 
-Как надо крутить $\tau_g$ вблизи/вдали
- 1) При малом $k_\omega$ сравнить поведение вблизи/вдали при различном $\omega_0$
- 2) Двойная инверсия работы генератора?
+%Как надо крутить $\tau_g$ вблизи/вдали
+% 1) При малом $k_\omega$ сравнить поведение вблизи/вдали при различном $\omega_0$
+% 2) Двойная инверсия работы генератора?
 
-Две точки усреднения: как объединить? А надо ли?
+%Две точки усреднения: как объединить? А надо ли?
 
-Адаптация $\tau_q$ / просто $\tau$ от $x$.
+%Адаптация $\tau_q$ / просто $\tau$ от $x$.
 
 
 
