Inittial biblatex usage.

--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -8,13 +8,13 @@
 В  практике   создания   радиоэлектронных   устройств   часто   используются
 генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
 сложно-периодические и хаотические.
-В частности, генератор  Колпитца~[??], в  зависимости   от   условий,   может
+В частности, генератор  Колпитца~[??,\cite{atu_asau21}], в  зависимости   от   условий,   может
 генерировать  колебания,  как  близкие  к  гармоническим,  так  и  проявлять
 хаотическую  динамику  в  широком  спектральном   диапазоне.   Идентификация
 параметров рассматриваемого генератора  необходима,  с  одной  стороны,  для
 обеспечения  требуемого  режима  работы.  С  другой  стороны,  информация  о
 параметрах системы необходима при проведении  контроля  работоспособности  в
-процессе эксплуатации~[??].
+процессе эксплуатации~\cite{atu_apir2013}.
 
 На рис.~\ref{atu:f:colp_schem} приставлена одна из электрических схем,
 реализующих генератор Колпитца на биполярном транзисторе.
